<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<scm>
		<connection>scm:git:file://.</connection>
		<developerConnection>scm:git:file://.</developerConnection>
		<url>scm:git:file://.</url>
		<tag>HEAD</tag>
	</scm>

	<groupId>com.lksnext</groupId>
	<artifactId>sqlite-builder-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>SQLite Builder Parent</name>
	<description>Parent of the SQLite Builder</description>

	<properties>
		<sonar.host.url>http://zuvmljenson01/sonar</sonar.host.url>
		<gson.version>2.8.5</gson.version>
		<commonsio.version>2.8.0</commonsio.version>
		<sqlite.jdbc.version>3.15.1</sqlite.jdbc.version>
		<maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
		<apache.commons.lang.version>2.6</apache.commons.lang.version>
		<apache.commons.collection.version>3.2.2</apache.commons.collection.version>
		<version.spring.data>1.4.1.RELEASE</version.spring.data>
		<mockito.version>1.9.5</mockito.version>
		<jooq.version>3.14.0</jooq.version>

		<version.springframework>5.0.19.RELEASE</version.springframework>
		<version.springframework.data>Kay-SR7</version.springframework.data>
		<version.springframework.boot>2.0.9.RELEASE</version.springframework.boot>
		<version.clogging>1.2</version.clogging>

		<!-- - Force configuration to not allow IDE to use its own. -->
		<!-- Character Encodings -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- - Versión de Java -->
		<java.version>1.8</java.version>

		<!-- - maven-compiler-plugin -->
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<!-- - Allows to redefine compiler parameters to separate between what 
			IDE understands - java version used to write source - and the real version 
			used by maven compiler. By default, the same. -->
		<maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
		<maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>

		<!-- - maven-enforcer-plugin -->
		<maven.min.version>3.0.4</maven.min.version>
		<jdk.min.version>${maven.compiler.argument.source}</jdk.min.version>

		<!-- - maven-eclipse-plugin -->
		<downloadSources>true</downloadSources>

	</properties>

	<!-- Minimum maven version enforced -->
	<prerequisites>
		<maven>${maven.min.version}</maven>
	</prerequisites>

	<modules>
		<module>sqlite-builder-api</module>
		<module>sqlite-builder-impl</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven.assembly.plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>1.0-m5.1</version>
				<configuration>
					<flowInitContext>
						<developBranchName>development</developBranchName>
						<releaseBranchPrefix>release-</releaseBranchPrefix>
					</flowInitContext>
					<noDeploy>true</noDeploy>
					<squash>true</squash>
					<scmCommentPrefix>[RELEASE] </scmCommentPrefix>
					<username>${git.user}</username>
					<password>${git.password}</password>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.lksnext</groupId>
				<artifactId>sqlite-builder-api</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.lksnext</groupId>
				<artifactId>sqlite-builder-impl</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${version.springframework}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-releasetrain</artifactId>
				<version>${version.springframework.data}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>

			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${version.springframework.boot}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commonsio.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${apache.commons.lang.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${apache.commons.collection.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>${version.clogging}</version>
			</dependency>

			<dependency>
				<groupId>org.xerial</groupId>
				<artifactId>sqlite-jdbc</artifactId>
				<version>${sqlite.jdbc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jooq</groupId>
				<artifactId>jooq</artifactId>
				<version>${jooq.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-commons-core</artifactId>
				<version>${version.spring.data}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-starter</artifactId>
				<version>${version.spring.shell}</version>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
